Fixed #154: - Collapsable blocks are loaded after the page is opened, by blocks, similar to advanced search. - Also tried to optimize a bit the tooltip process on this page ( after some looking at it, the tool tipping process is the most intensive process on this page). I improved it a bit, but it could be immensely improved probably, something to have an eye out for.

--- a/emif/emif/static/css/main.css
+++ b/emif/emif/static/css/main.css
@@ -326,3 +326,7 @@ box-shadow: inset 0 3px 8px rgba(0,0,0,0.125);
      /* Overriding default bootstrap behaviour*/
     padding: 10px 10px 10px !important;   
 }
+
+.fullwidth {
+  width: 100%;
+}
